feat(parameters): implement Grammar of Parameters and BaseModel frameworks
 Implement comprehensive parameter management system for Calabria models
 with immutable types, transforms, and validation addressing code review issues.

 Highlights:
 - add constants module centralizing SEED_COL definition
 - implement robust integer parameter validation rejecting booleans and non-integer floats
 - add explicit NaN/Inf checks with clear error messages
 - implement ParameterSet.new() factory method for ergonomic construction
 - fix AffineSqueezedLogit boundary clamping to ensure [0,1] bounds
 - add complete parameter framework with transforms and scenario support
 - implement BaseModel with seal-on-first-use pattern and decorator discovery
 - add comprehensive test suite with 1,800+ lines covering edge cases

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "modelops-bundle",
     "modelops-contracts",
+    "polars>=1.33.1",
 ]
 
 [build-system]
@@ -16,3 +17,9 @@ build-backend = "hatchling.build"
 [tool.uv.sources]
 modelops-contracts = { path = "../modelops-contracts" }
 modelops-bundle = { path = "../modelops-bundle" }
+
+[dependency-groups]
+dev = [
+    "hypothesis>=6.139.1",
+    "pytest>=8.4.2",
+]
