--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ modelops-bundle = { path = "../modelops-bundle" }
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
     "hypothesis>=6.139.1",
     "pytest>=8.4.2",
+    "ruff>=0.13.0",
 ]
