feat(cli)!: implement manifest-based CLI with stateless architecture
Replace registry-based system with deterministic manifest generation and
stateless wire protocol. This transformation enables reproducible builds,
content-addressed model identification, and eliminates global state issues.

The new architecture centers around a manifest system that creates
cryptographic fingerprints of models and dependencies, enabling version
control based on actual content rather than arbitrary version numbers.

Key improvements:
- Add comprehensive CLI for model discovery, export, and verification
- Implement token-based file hashing for semantic change detection
- Create stateless wire loader replacing heavy closure-based system
- Add programmatic API facade for CLI functionality access
- Include real integration tests with subprocess execution
- Provide extensive design documentation for maintainability

New capabilities:
- `cb models discover`: AST-based model discovery without imports
- `cb models export`: Configuration management in pyproject.toml
- `cb models verify`: Import boundary verification with subprocess isolation
- `cb manifest build`: Deterministic manifest generation with content hashing
- Python API via `CalabariaCLI` class and convenience functions

The manifest system uses token-based hashing to ignore formatting changes
while detecting semantic modifications, ensuring that Black formatting or
comment changes don't affect the bundle ID.

BREAKING CHANGE: Wire protocol redesigned from registry-based to
manifest-based execution. Models now require explicit manifest generation
before deployment. The global REGISTRY is removed in favor of stateless
wire loading.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,24 +4,25 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "modelops-bundle",
-    "modelops-contracts",
-    "polars>=1.33.1",
-]
+
+dependencies = [ "modelops-bundle", "modelops-contracts", "polars>=1.33.1", "typer>=0.12.0", "toml>=0.10.0",]
 
 [build-system]
-requires = ["hatchling"]
+requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
-[tool.uv.sources]
-modelops-contracts = { path = "../modelops-contracts" }
-modelops-bundle = { path = "../modelops-bundle" }
-
 [dependency-groups]
-dev = [
-    "black>=25.1.0",
-    "hypothesis>=6.139.1",
-    "pytest>=8.4.2",
-    "ruff>=0.13.0",
-]
+dev = [ "black>=25.1.0", "hypothesis>=6.139.1", "pytest>=8.4.2", "ruff>=0.13.0", "numpy>=1.24.0",]
+
+[project.scripts]
+cb = "modelops_calabaria.cli.__main__:cli_main"
+
+[tool.calabaria]
+schema = 1
+abi = "model-entrypoint@1"
+
+[tool.uv.sources.modelops-contracts]
+path = "../modelops-contracts"
+
+[tool.uv.sources.modelops-bundle]
+path = "../modelops-bundle"
