feat(sampling): implement Sobol and Grid sampling strategies with CLI integration
Add comprehensive parameter sampling framework enabling efficient exploration
of model parameter spaces for calibration and sensitivity analysis workflows.

Highlights:
- add SobolSampler using quasi-random sequences with optional scrambling
- add GridSampler for exhaustive parameter space coverage
- add CLI commands `cb sampling sobol` and `cb sampling grid`
- implement bundle reference validation with sha256:64-hex format
- add scipy dependency for advanced sampling algorithms
- include 500+ lines of comprehensive test coverage

Closes ModelOps integration requirements for distributed parameter exploration.

--- a/examples/epi_models/pyproject.toml
+++ b/examples/epi_models/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [ "modelops-calabaria", "polars>=1.33.1", "numpy>=1.24.0",]
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/models"]
+
 [tool.calabaria]
 schema = 1
 abi = "model-entrypoint@1"
