--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 
-dependencies = [ "modelops-bundle", "modelops-contracts", "polars>=1.33.1", "typer>=0.12.0", "toml>=0.10.0",]
+dependencies = [
+ "modelops-bundle",
+ "modelops-contracts",
+ "polars>=1.33.1",
+ "typer>=0.12.0",
+ "toml>=0.10.0",
+ "scipy>=1.16.2",
+]
 
 [build-system]
 requires = [ "hatchling",]
