--- a/examples/epi_models/pyproject.toml
+++ b/examples/epi_models/pyproject.toml
@@ -3,8 +3,14 @@ name = "epi-models-example"
 version = "0.1.0"
 description = "Example epidemiological models for ModelOps-Calabaria"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 dependencies = [ "modelops-calabaria", "polars>=1.33.1", "numpy>=1.24.0",]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "pytest-timeout>=2.1.0",
+]
 
 [build-system]
 requires = [ "hatchling",]
