feat(core): implement targets system with wire protocol integration
  Add comprehensive calibration targets system enabling model-data alignment
  and loss evaluation for parameter estimation workflows. Implements the complete
  targets architecture from Calabaria core with ModelOps wire protocol integration.

  Highlights:
  - add core targets framework with Target, Targets, and evaluation strategies
  - add alignment strategies for exact joins and time-series asof joins
  - add wire protocol function for distributed target evaluation
  - add comprehensive test suite covering alignment and evaluation workflows
  - update modelops-contracts dependency to latest git version

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ dist/
 wheels/
 *.egg-info
 
+# Testing and coverage
+.coverage
+.coverage.*
+htmlcov/
+*.cover
+.hypothesis/
+.pytest_cache/
+coverage.xml
+
 # Virtual environments
 .venv
 
