--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
  "typer>=0.12.0",
  "toml>=0.10.0",
  "scipy>=1.16.2",
+ "matplotlib>=3.10.7",
+ "pyarrow>=22.0.0",
 ]
 
 [build-system]
