--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
  "matplotlib>=3.10.7",
  "pyarrow>=22.0.0",
  "optuna>=3.0.0",
+ "psycopg2-binary>=2.9.0",  # Required for Optuna PostgreSQL storage
 ]
 
 [build-system]
